# UTS-MDSI-AMLA

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: cheung_ivan-13975420-week1_log_regression.ipynb  cheung_ivan-13975420-week2_log_reg_smote.ipynb  cheung_ivan-13975420-week3_adaboost_gridsearch.ipynb  model_1.ipynb  model_2.ipynb  model_3.ipynb  model_4.ipynb  model_5.ipynb
reports/: EXPERIMENT REPORT - Template.docx  REPORT - Cheung_Ivan-13975420-week1_log_regression.docx  REPORT - Cheung_Ivan-13975420-week2_log_regression_upsampling.docx  REPORT - Cheung_Ivan-13975420-week3_adaboost_with_searchgrid.docx  REPORT - Cheung_Ivan_13975420-final.docx
